hands-on-labs/03-storage-and-services/05-django-mini-poc-project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-notes-ingress
  namespace: nginx
spec: 
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /nginx
          backend:
            service:
              name: nginx-service
              port: 
                number: 80

        - pathType: Prefix
          path: /app
          backend:
            service:
              name: notes-app-service
              port:
                number: 8000
